--- a/index.html
+++ b/index.html
@@ -9,10 +9,57 @@
     <title>Body Mass Index Calculator</title>
     <link rel="shortcut icon" href="./assets/images/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
+    <link rel="stylesheet" href="./assets/css/variables.css">
+    <link rel="stylesheet" href="./assets/css/resets.css">
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body>
-    
+    <header class="header">
+        <div class="header__bg"></div>
+        <div class="container">
+            <div class="header__img-holder">
+                <img src="./assets/images/logo.svg" alt="BMI Logo" class="header__img">
+            </div>
+            <div class="header__content">
+                <div class="header__description">
+                    <h1 class="header__description-heading">Body mass <br>index calculator</h1>
+                    <p class="header__description-info">Better understand your weight in relation to your height using our body mass index (BMI) calculator. While BMI is not the sole determinant of a healthy weight, it offers a valuable starting point to evaluate your overall, health and well-being</p>
+                </div>
+                <div class="header__calculator bg-white">
+                    <h5 class="header__calculator-heading mb-3">Enter your details below</h5>
+                    <div class="header__measurement-unit-choice">
+                        <div class="col-6"></div>
+                        <div class="col-6"></div>
+                    </div>
+                    <div class="header__measurement header__measurement--metrics">
+                        <div class="header__measurement-section">
+                            <label class="header__calculator-label" for="height">Height</label>
+                            <div class="d-flex w-100 p-3 header__measurement-type">
+                                <input type="text" class="header__calculator-input" placeholder="0" id="height">
+                                <h4 class="header__measurement-unit">cm</h4>
+                            </div>
+                        </div>
+                        <div class="header__measurement-section">
+                            <label class="header__calculator-label" for="weight">Weight</label>
+                            <div class="d-flex w-100 p-3 header__measurement-type">
+                                <input type="text" class="header__calculator-input" placeholder="0" id="weight">
+                                <h4 class="header__measurement-unit">kg</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="header__result">
+                        <div class="header__result-welcome">
+                            <h4 class="header__result-welcome-heading">Welcome!</h4>
+                            <p class="header__result-welcome-description m-0">
+                                Enter your height and weight and you'll see your BMI result here
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
     
 </body>
 </html>
