add bmi section and prevention section together with styles

--- a/index.html
+++ b/index.html
@@ -60,6 +60,60 @@
             </div>
         </div>
     </header>
+
+    <main>
+        <section class="bmi">
+            <div class="bmi__container">
+                <img src="./assets/images/image-man-eating.webp" class="bmi__image"/>
+                <div class="bmi__description">
+                    <h1 class="bmi__heading">What your BMI result means</h1>
+                    <p class="bmi__info">
+                        A BMI range of 18.5 to 24.9 is considered a 'healthy weight.' Maintaining a healthy weight may lower your chances of experiencing health issues later on, such as obesity and type 2 diabetes. Aim for a nutritious diet with reduced fat and sugar content, incorporating ample fruits and vegetables. Additionally, strive for regular physical activity, ideally about 30 minutes daily for five days a week.
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <section class="prevention">
+            <div class="container prevention__container">
+                <div class="row">
+                    <div class="col-12 col-xl-4 prevention__section-mb">
+                        <div class="prevention__section">
+                            <img src="./assets/images/icon-eating.svg" alt="Eating icon" class="prevention__icon">
+                            <div class="prevention__section-content">
+                                <h3 class="prevention__section-heading">Healthy eating</h3>
+                                <p class="prevention__section-info">
+                                    Healthy eating promotes weight control, disease prevention, better digestion, immunity, mental clarity, and mood.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-xl-4 prevention__section-mb">
+                        <div class="prevention__section">
+                            <img src="./assets/images/icon-exercise.svg" alt="Exercise icon" class="prevention__icon">
+                            <div class="prevention__section-content">
+                                <h3 class="prevention__section-heading">Regular exercise</h3>
+                                <p class="prevention__section-info">
+                                    Healthy eating promotes weight control, disease prevention, better digestion, immunity, mental clarity, and mood.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-xl-4">
+                        <div class="prevention__section">
+                            <img src="./assets/images/icon-sleep.svg" alt="Sleep icon" class="prevention__icon">
+                            <div class="prevention__section-content">
+                                <h3 class="prevention__section-heading">Adequate sleep</h3>
+                                <p class="prevention__section-info">
+                                    Healthy eating promotes weight control, disease prevention, better digestion, immunity, mental clarity, and mood.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     
 </body>
 </html>
