--- a/index.html
+++ b/index.html
@@ -63,10 +63,11 @@
 
     <main>
         <section class="bmi">
+            <img src="./assets/images/pattern-curved-line-left.svg" alt="curved shape" class="bmi__curved" />
             <div class="bmi__container">
                 <img src="./assets/images/image-man-eating.webp" class="bmi__image"/>
                 <div class="bmi__description">
-                    <h1 class="bmi__heading">What your BMI result means</h1>
+                    <h1 class="bmi__heading">What your BMI result <br>means</h1>
                     <p class="bmi__info">
                         A BMI range of 18.5 to 24.9 is considered a 'healthy weight.' Maintaining a healthy weight may lower your chances of experiencing health issues later on, such as obesity and type 2 diabetes. Aim for a nutritious diet with reduced fat and sugar content, incorporating ample fruits and vegetables. Additionally, strive for regular physical activity, ideally about 30 minutes daily for five days a week.
                     </p>
@@ -75,44 +76,95 @@
         </section>
 
         <section class="prevention">
-            <div class="container prevention__container">
-                <div class="row">
-                    <div class="col-12 col-xl-4 prevention__section-mb">
-                        <div class="prevention__section">
-                            <img src="./assets/images/icon-eating.svg" alt="Eating icon" class="prevention__icon">
-                            <div class="prevention__section-content">
-                                <h3 class="prevention__section-heading">Healthy eating</h3>
-                                <p class="prevention__section-info">
-                                    Healthy eating promotes weight control, disease prevention, better digestion, immunity, mental clarity, and mood.
-                                </p>
+            <div class="prevention__container">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12 col-xl-4 prevention__section-mb">
+                            <div class="prevention__section">
+                                <img src="./assets/images/icon-eating.svg" alt="Eating icon" class="prevention__icon">
+                                <div class="prevention__section-content">
+                                    <h3 class="prevention__section-heading">Healthy eating</h3>
+                                    <p class="prevention__section-info">
+                                        Healthy eating promotes weight control, disease prevention, better digestion, immunity, mental clarity, and mood.
+                                    </p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-12 col-xl-4 prevention__section-mb">
-                        <div class="prevention__section">
-                            <img src="./assets/images/icon-exercise.svg" alt="Exercise icon" class="prevention__icon">
-                            <div class="prevention__section-content">
-                                <h3 class="prevention__section-heading">Regular exercise</h3>
-                                <p class="prevention__section-info">
-                                    Healthy eating promotes weight control, disease prevention, better digestion, immunity, mental clarity, and mood.
-                                </p>
+                        <div class="col-12 col-xl-4 prevention__section-mb">
+                            <div class="prevention__section">
+                                <img src="./assets/images/icon-exercise.svg" alt="Exercise icon" class="prevention__icon">
+                                <div class="prevention__section-content">
+                                    <h3 class="prevention__section-heading">Regular exercise</h3>
+                                    <p class="prevention__section-info">
+                                        Healthy eating promotes weight control, disease prevention, better digestion, immunity, mental clarity, and mood.
+                                    </p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-12 col-xl-4">
-                        <div class="prevention__section">
-                            <img src="./assets/images/icon-sleep.svg" alt="Sleep icon" class="prevention__icon">
-                            <div class="prevention__section-content">
-                                <h3 class="prevention__section-heading">Adequate sleep</h3>
-                                <p class="prevention__section-info">
-                                    Healthy eating promotes weight control, disease prevention, better digestion, immunity, mental clarity, and mood.
-                                </p>
+                        <div class="col-12 col-xl-4">
+                            <div class="prevention__section">
+                                <img src="./assets/images/icon-sleep.svg" alt="Sleep icon" class="prevention__icon">
+                                <div class="prevention__section-content">
+                                    <h3 class="prevention__section-heading">Adequate sleep</h3>
+                                    <p class="prevention__section-info">
+                                        Healthy eating promotes weight control, disease prevention, better digestion, immunity, mental clarity, and mood.
+                                    </p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+
+        <section class="limitation">
+            <div class="container">
+                <div class="limitation__description">
+                    <h1 class="limitation__heading">Limitations of BMI</h1>
+                    <p class="m-0">Although BMI is often a practical indicator of healthy weight, it is not suited for every person. Specific groups should carefully consider their BMI outcomes, and in certain cases, the measurement may not be beneficial to use.</p>
+                </div>
+                <div class="limitation__areas">
+                    <img src="./assets/images/pattern-curved-line-right.svg" alt="Curve shape" class="limitation__curved">
+                    <div class="limitation__areas-section  section-top">
+                        <div class="limitation__areas-section-top">
+                            <img src="./assets/images/icon-gender.svg" alt="Gender" class="limitation__areas-section-img">
+                            <h5 class="limitation__areas-section-heading">Gender</h5>
+                        </div>
+                        <p class="m-0">The development and body fat composition of girls and boys vary with age. Consequently, a child's age and gender are considered when evaluating their BMI.</p>
+                    </div>
+                    <div class="limitation__areas-section section-middle-left">
+                        <div class="limitation__areas-section-top">
+                            <img src="./assets/images/icon-age.svg" alt="Birthday" class="limitation__areas-section-img">
+                            <h5 class="limitation__areas-section-heading">Age</h5>
+                        </div>
+                        <p class="m-0">In aging individuals, increased body fat and muscle loss may cause BMI to underestimate body fat content.</p>
+                    </div>
+                    <div class="limitation__areas-section section-middle-right">
+                        <div class="limitation__areas-section-top">
+                            <img src="./assets/images/icon-muscle.svg" alt="Muscle" class="limitation__areas-section-img">
+                            <h5 class="limitation__areas-section-heading">Muscle</h5>
+                        </div>
+                        <p class="m-0">BMI may misclassify muscular individuals as overweight or obese, as it doesn't differentiate muscle from fat.</p>
+                    </div>
+                    <div class="limitation__areas-section section-bottom-left">
+                        <div class="limitation__areas-section-top">
+                            <img src="./assets/images/icon-pregnancy.svg" alt="Pregnancy" class="limitation__areas-section-img">
+                            <h5 class="limitation__areas-section-heading">Pregnancy</h5>
+                        </div>
+                        <p class="m-0">Expectant mothers experience weight gain due to their growing baby. Maintaining a healthy pre-pregnancy BMI is advisable to minimise health risks for both mother and child.</p>
+                    </div>
+                    <div class="limitation__areas-section section-bottom-right">
+                        <div class="limitation__areas-section-top">
+                            <img src="./assets/images/icon-race.svg" alt="Race" class="limitation__areas-section-img">
+                            <h5 class="limitation__areas-section-heading">Race</h5>
+                        </div>
+                        <p class="m-0">Certain health concerns may affect individuals of some Black and Asian origins at lower BMIs than others. To learn more, it is advised to discuss this with your GP or practice nurse.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
     </main>
     
 </body>
