add html element for creating custom radio button and label behavior

--- a/index.html
+++ b/index.html
@@ -29,8 +29,18 @@
                 <div class="header__calculator bg-white">
                     <h5 class="header__calculator-heading mb-3">Enter your details below</h5>
                     <div class="header__measurement-unit-choice">
-                        <div class="col-6"></div>
-                        <div class="col-6"></div>
+                        <div class="col-6">
+                            <label class="header__measurement-label">
+                                <input class="header__measurement-radio" type="radio" name="unit"/>
+                                Metrics
+                            </label>
+                        </div>
+                        <div class="col-6">
+                            <label class="header__measurement-label">
+                                <input class="header__measurement-radio" type="radio" name="unit"/>
+                                Imperial
+                            </label>
+                        </div>
                     </div>
                     <div class="header__measurement header__measurement--metrics">
                         <div class="header__measurement-section">
