--- a/index.html
+++ b/index.html
@@ -173,9 +173,8 @@
                 </div>
             </div>
         </section>
-
-
     </main>
     
+    <script src="./assets/js/app.js"></script>
 </body>
 </html>
