add bmi result section html

--- a/index.html
+++ b/index.html
@@ -88,11 +88,22 @@
                         </div>
                     </div>
                     <div class="header__result">
-                        <div class="header__result-welcome">
+                        <div class="header__result-welcome d-none">
                             <h4 class="header__result-welcome-heading">Welcome!</h4>
                             <p class="header__result-welcome-description m-0">
                                 Enter your height and weight and you'll see your BMI result here
                             </p>
+                        </div>
+                        <div class="header__result-info">
+                            <div class="header__result-answer">
+                                <p class="header__result-answer-text">Your BMI is...</p>
+                                <h1 class="header__result-answer-heading">23.4</h1>
+                            </div>
+                            <div class="header__result-description">
+                                <p class="header__result-description-info">
+                                    Your BMI suggests you're a healthy weight. Your ideal weight is between <strong class="header__result-info-value">63.3kg - 85.2kg</strong>
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
